# exploding-head-game

./: .gitattributes  .gitignore  LICENSE  README.md
assets/: plurality_pixelart.aseprite
assets/sprites/: exploding_head_pixelart.aseprite
crates/assets/: Cargo.toml
crates/assets/src/: sprite_sheet.rs
crates/build-tools/: Cargo.toml
crates/build-tools/src/: args.rs  main.rs  sprite_sheet.rs
crates/game/: Cargo.toml  index.html
crates/game/src/: config.rs  error.rs  lib.rs  main.rs
crates/game/src/game/: components.rs  mod.rs  resources.rs  systems.rs
crates/game/src/graphics/: mod.rs  shader.wgsl  texture.rs
crates/utils/: Cargo.toml
crates/utils/src/: arena.rs  lib.rs
