[package]
name = "assets"
version = "0.1.0"
edition = "2021"
publish = false
description = "exploding-head-game prototype"
repository = "https://github.com/queer-emma/exploding-head-game"
license = "MIT"

[dependencies.utils]
version = "0.1.0"
path = "../utils"

[dependencies]
log = "0.4"
image = "0.24"
serde = "1.0"
serde_json = "1.0"
euclid = { version = "0.22", features = ["serde"] }
