[package]
name = "build-tools"
version = "0.1.0"
edition = "2021"
publish = false
description = "brain-digger game prototype"
repository = "https://github.com/queer-emma/brain-digger"
license = "MIT"

[dependencies.utils]
version = "0.1.0"
path = "../utils"

[dependencies.assets]
version = "0.1.0"
path = "../assets"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
color-eyre = "0.6"
structopt = "0.3"
thiserror = "1.0"
guillotiere = { version = "0.6", features = ["serialization"] }
image = "0.24"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread", "fs"] }
