[package]
name = "utils"
version = "0.1.0"
edition = "2021"
publish = false
description = "brain-digger game prototype"
repository = "https://github.com/queer-emma/brain-digger"
license = "MIT"

[dependencies]
log = "0.4"
thiserror = "1.0"
euclid = "0.22"
serde = { version = "1.0", features = ["derive"] }

[dependencies.murmur3]
version = "0.1.0"
git = "https://github.com/jgraef/murmur3.git"
